--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   flutter_launcher_icons: ^0.14.3
   get_storage: ^2.1.1
   equatable: ^2.0.7
+  flutter_easyloading: ^3.0.5
+  dotted_border: ^2.1.0
 
 dev_dependencies:
   flutter_test:
