--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/
+    - assets/images/task.webp
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
