--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   rename_app: ^1.6.2
   android_alarm_manager_plus: ^4.0.7
   google_fonts: ^6.2.1
+  percent_indicator: ^4.2.4
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
